==> athanniss/capstone-hw/sofware/h743-valve-controller/Core/catalib/devices/ssd1306/ssd1306.c <==
#include "ssd1306.h"
#include <math.h>
#include <stdlib.h>
#include <string.h>  // For memcpy
#include "main.h"

void ssd1306_Reset(void) {
    /* for I2C - do nothing */
}

void ssd1306_WriteCommand(uint8_t byte) {

    LL_I2C_HandleTransfer(SSD1306_I2C_PORT, SSD1306_I2C_ADDR, LL_I2C_ADDRSLAVE_7BIT, 1, LL_I2C_MODE_AUTOEND, LL_I2C_GENERATE_START_WRITE);

    LL_I2C_TransmitData8(SSD1306_I2C_PORT, byte);

    while(!LL_I2C_IsActiveFlag_TXE(SSD1306_I2C_PORT)) {}
}

void ssd1306_WriteData(uint8_t* buffer, size_t buff_size)
 {
    size_t cnt = 0;

    LL_I2C_HandleTransfer(SSD1306_I2C_PORT, SSD1306_I2C_ADDR, LL_I2C_ADDRSLAVE_7BIT, buff_size + 1, LL_I2C_MODE_AUTOEND, LL_I2C_GENERATE_START_WRITE);

    LL_I2C_TransmitData8(SSD1306_I2C_PORT, 0x40);

    while(!LL_I2C_IsActiveFlag_TXE(SSD1306_I2C_PORT)) {}

    for(cnt = 0; cnt < buff_size; cnt++)
    {
        LL_I2C_TransmitData8(SSD1306_I2C_PORT, buffer[cnt]);
        while(!LL_I2C_IsActiveFlag_TXE(SSD1306_I2C_PORT)) {}
    }
}

void ssd1306_Reset(void) {
    // CS = High (not selected)
    HAL_GPIO_WritePin(SSD1306_CS_Port, SSD1306_CS_Pin, GPIO_PIN_SET);

    // Reset the OLED
    HAL_GPIO_WritePin(SSD1306_Reset_Port, SSD1306_Reset_Pin, GPIO_PIN_RESET);
    ssd1306_Delay(10);
    HAL_GPIO_WritePin(SSD1306_Reset_Port, SSD1306_Reset_Pin, GPIO_PIN_SET);
    ssd1306_Delay(10);
}

void ssd1306_WriteCommand(uint8_t byte) {
    HAL_GPIO_WritePin(SSD1306_CS_Port, SSD1306_CS_Pin, GPIO_PIN_RESET); // select OLED
    HAL_GPIO_WritePin(SSD1306_DC_Port, SSD1306_DC_Pin, GPIO_PIN_RESET); // command
    HAL_SPI_Transmit(&SSD1306_SPI_PORT, (uint8_t *) &byte, 1, HAL_MAX_DELAY);
    HAL_GPIO_WritePin(SSD1306_CS_Port, SSD1306_CS_Pin, GPIO_PIN_SET); // un-select OLED
}

void ssd1306_WriteData(uint8_t* buffer, size_t buff_size) {
    HAL_GPIO_WritePin(SSD1306_CS_Port, SSD1306_CS_Pin, GPIO_PIN_RESET); // select OLED
    HAL_GPIO_WritePin(SSD1306_DC_Port, SSD1306_DC_Pin, GPIO_PIN_SET); // data
    HAL_SPI_Transmit(&SSD1306_SPI_PORT, buffer, buff_size, HAL_MAX_DELAY);
    HAL_GPIO_WritePin(SSD1306_CS_Port, SSD1306_CS_Pin, GPIO_PIN_SET); // un-select OLED
}
